--- a/practice.html
+++ b/practice.html
@@ -1,244 +1,370 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>入店記録</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>店外待ち管理（店員用）</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getFirestore, collection, addDoc, query, where, getDocs
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    window.addEventListener("load", async () => {
-      const params = new URLSearchParams(window.location.search);
-      const table = params.get("table") || "unknown";
-      const timestamp = new Date().toISOString();
-      const device = navigator.userAgent;
-
-      try {
-        const logsRef = collection(db, "logs");
-        const q = query(logsRef, where("table", "==", table));
-        const snapshot = await getDocs(q);
-
-        let enterCount = 0;
-        let exitCount = 0;
-
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          if (data.type === "enter") enterCount++;
-          if (data.type === "exit") exitCount++;
-        });
-
-        if (enterCount > exitCount) {
-          // すでに入店済み（退店していない） → already-enter.html に遷移
-          window.location.href = "already-enter.html";
-          return;
-        }
-
-        // ✅ 入店記録を保存
-        await addDoc(logsRef, {
-          type: "enter",
-          table,
-          timestamp,
-          device
-        });
-
-        console.log("✅ 入店記録完了");
-
-      } catch (error) {
-        console.error("❌ Firebase記録エラー:", error);
-      }
-    });
-  </script>
-
   <style>
-    /* （CSSはそのまま、前回送っていただいた完成版と同じ） */
     body {
+      font-family: sans-serif;
       margin: 0;
       padding: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #333;
-      overflow: hidden;
+      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
     }
-
-    .loader {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      z-index: 9999;
-      top: 0;
-      left: 0;
+    header {
+      background-color: #2c3e50;
+      color: white;
+    }
+    .header-bar {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      flex-direction: column;
+      padding: 12px 20px;
     }
-
-    .loading-wrapper {
-      position: relative;
-      width: 220px;
-      margin-bottom: 20px;
-    }
-
-    .loading-bar {
-      width: 100%;
-      height: 20px;
-      border: 2px solid #999;
-      border-radius: 10px;
-      overflow: hidden;
-    }
-
-    .loading-fill {
-      height: 100%;
-      width: 0%;
-      background-color: #7baaf7;
-      animation: loading-animation 3s forwards;
-    }
-
-    @keyframes loading-animation {
-      0% { width: 0%; }
-      100% { width: 100%; }
-    }
-
-    .loading-text {
-      position: absolute;
-      top: -24px;
-      right: 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    .welcome-img {
-      display: none;
-      width: 140px;
-      height: auto;
-      margin-bottom: 10px;
-      animation: fade-slide 1s ease-in-out;
-    }
-
-    .loader .txt {
-      font-size: 28px;
+    .header-title {
+      font-size: 1.5em;
       font-weight: bold;
-      color: #2c3e50;
-      display: none;
-      animation: fade-slide 1s ease-in-out;
     }
-
-    @keyframes fade-slide {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    .main-content {
-      display: none;
-      height: 100vh;
+    .header-links {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      position: relative;
+      gap: 20px;
     }
-
-    .container {
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      animation: fade-zoom-in 0.8s ease-in-out;
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
     }
-
-    .icon {
-      font-size: 64px;
-      margin-bottom: 20px;
-      animation: bounce 1.5s infinite ease-in-out;
+    .header-links a:hover {
+      text-decoration: underline;
     }
-
+    .menu-button {
+      position: absolute;
+      left: 20px;
+      top: 12px;
+      width: 30px;
+      height: 24px;
+      cursor: pointer;
+      z-index: 1001;
+    }
+    .menu-button span {
+      display: block;
+      height: 4px;
+      background: white;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+    .drawer {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #34495e;
+      color: white;
+      transition: 0.3s;
+      z-index: 1000;
+      padding-top: 60px;
+    }
+    .drawer.open {
+      left: 0;
+    }
+    .drawer a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-bottom: 1px solid #2c3e50;
+    }
+    .drawer a:hover {
+      background-color: #2c3e50;
+    }
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
     h1 {
-      font-size: 28px;
+      text-align: center;
+      padding: 20px;
+    }
+    h2 {
+      margin-top: 40px;
       margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+      text-align: center;
+    }
+    .queue-item {
+      background: #fff;
+      padding: 15px;
+      margin: 10px auto;
+      max-width: 500px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .queue-item p {
+      margin: 5px 0;
+    }
+    .btn-group {
+      margin-top: 10px;
+    }
+    button {
+      margin-right: 10px;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .btn-enter { background: #2ecc71; color: white; }
+    .btn-exit { background: #e74c3c; color: white; }
+
+    #avg-times {
+      text-align: center;
+      margin: 20px auto;
+      font-weight: bold;
+      padding: 20px;
+      background-color: #fef6e4;
+      border: 2px solid #f3d250;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      font-size: 1.1em;
     }
 
-    p {
-      font-size: 18px;
+    table {
+      width: 90%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      background-color: #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-
-    @keyframes fade-zoom-in {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ccc;
+      text-align: center;
     }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+    th {
+      background-color: #ecf0f1;
     }
   </style>
 </head>
 <body>
-
-  <!-- ローディング -->
-  <div class="loader" id="loader03">
-    <div class="loading-wrapper" id="loadingWrapper">
-      <div class="loading-text" id="loadingLabel">Now Loading...</div>
-      <div class="loading-bar">
-        <div class="loading-fill"></div>
+  <header>
+    <div class="menu-button"><span></span><span></span><span></span></div>
+    <div class="header-bar">
+      <div class="header-title">　　　　　店内管理システム</div>
+      <div class="header-links">
+        <a href="index.html">ログアウト</a>
       </div>
     </div>
-    <img src="welcome.png" alt="店員" class="welcome-img" id="welcomeImg" />
-    <p class="txt" id="welcomeText">いらっしゃいませ！<br>　　Welcome!</p>
-  </div>
-
-  <!-- メイン -->
-  <div class="main-content" id="main-content">
-    <div class="container">
-      <div class="icon">🛍️</div>
-      <h1>ご来店ありがとうございます！</h1>
-      <p>入店が記録されました。</p>
-      <p>Thank you for visiting our store!</p>
-      <p>Your entry has been recorded.</p>
+    <div class="drawer">
+      <a href="dashboard.html">ホーム</a>
+      <a href="table.html">テーブル管理</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">順番待ち管理</a>
+      <a href="/QR/qrcode.html">QRコード一覧</a>
+      <a href="generate.html">QRコード生成</a>
     </div>
-  </div>
+  </header>
 
-  <!-- アニメーション制御 -->
-  <script>
-    $(document).ready(function () {
-      setTimeout(() => {
-        $('#loadingLabel').text("Completion!");
-      }, 3100);
+  <h1 style="display:none;" id="mainTitle">順番待ち管理</h1>
 
-      setTimeout(() => {
-        $('#loadingWrapper').fadeOut(400);
-      }, 3600);
+  <section>
+    <div id="avg-times">滞在時間を計算中...</div>
+    <h2>順番一覧</h2>
+  </section>
+  <div id="queueList"></div>
 
-      setTimeout(() => {
-        $('#welcomeImg').fadeIn(600);
-        $('#welcomeText').fadeIn(600);
-      }, 4200);
+  <section>
+    <h2>順番待ち履歴</h2>
+    <table id="queueHistory">
+      <thead>
+        <tr>
+          <th>番号札</th>
+          <th>時刻</th>
+          <th>状態</th>
+          <th>待たせた時間</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
 
-      setTimeout(() => {
-        $('#loader03').fadeOut(600, function () {
-          $('#main-content').fadeIn(600);
-        });
-      }, 6000);
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+    authDomain: "qr-visitor-log.firebaseapp.com",
+    projectId: "qr-visitor-log",
+    storageBucket: "qr-visitor-log.appspot.com",
+    messagingSenderId: "304250341939",
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  const dayMap = ["日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"];
+
+  function calculateAverages() {
+    db.collection("logs").onSnapshot(snapshot => {
+      const logs = snapshot.docs.map(doc => doc.data());
+      logs.sort((a, b) => new Date(a.timestamp) - new Date(b.timestamp));
+      const sessions = {};
+      const durations = [];
+
+      const today = new Date();
+      const todayStr = today.toISOString().slice(0, 10);
+      const todayDurations = [];
+      const weekdayDurations = [];
+
+      logs.forEach(log => {
+        const key = log.device + "_" + log.table;
+        const time = new Date(log.timestamp);
+        if (log.type === "enter") {
+          sessions[key] = time;
+        } else if (log.type === "exit" && sessions[key]) {
+          const duration = (time - sessions[key]) / 1000;
+          if (duration > 0 && duration < 60 * 60 * 5) {
+            durations.push(duration);
+            const enterStr = sessions[key].toISOString().slice(0, 10);
+            const weekday = sessions[key].getDay();
+            if (enterStr === todayStr) todayDurations.push(duration);
+            if (weekday === today.getDay()) weekdayDurations.push(duration);
+          }
+          delete sessions[key];
+        }
+      });
+
+      function formatAvg(list) {
+        if (list.length === 0) return "データなし";
+        const avg = list.reduce((a, b) => a + b, 0) / list.length;
+        const m = Math.floor(avg / 60);
+        const s = Math.floor(avg % 60);
+        return `${m}分${s}秒（${list.length}名）`;
+      }
+
+      document.getElementById("avg-times").innerHTML = `
+        ✅ <strong>今日の平均滞在時間：</strong>${formatAvg(todayDurations)}<br>
+        📅 <strong>${dayMap[today.getDay()]}の平均滞在時間：</strong>${formatAvg(weekdayDurations)}<br>
+        📊 <strong>総合平均滞在時間：</strong>${formatAvg(durations)}
+      `;
     });
-  </script>
+  }
 
+  function renderQueue() {
+    db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+      const ticketMap = {};
+      const allDocs = snapshot.docs;
+      const visibleDocs = allDocs.filter(doc => {
+        const status = doc.data().status;
+        return status === "waiting" || status === "entered";
+      });
+      const list = document.getElementById("queueList");
+      list.innerHTML = "";
+
+      allDocs.forEach((doc, index) => {
+        if (!(doc.id in ticketMap)) ticketMap[doc.id] = index + 1;
+      });
+
+      visibleDocs.forEach(doc => {
+        const data = doc.data();
+        const item = document.createElement("div");
+        item.className = "queue-item";
+        item.innerHTML = `
+          <p><strong>番号札:</strong> ${ticketMap[doc.id]}</p>
+          <p><strong>時刻:</strong> ${new Date(data.timestamp).toLocaleString("ja-JP")}</p>
+          <p><strong>状態:</strong> ${data.status}</p>
+          <div class="btn-group"></div>
+        `;
+
+        const btnGroup = item.querySelector(".btn-group");
+
+        if (data.status === "waiting") {
+          const btnEnter = document.createElement("button");
+          btnEnter.className = "btn-enter";
+          btnEnter.textContent = "入店通知";
+          btnEnter.onclick = () => {
+            db.collection("queue").doc(doc.id).update({
+              status: "entered",
+              enteredAt: new Date().toISOString()
+            });
+          };
+          btnGroup.appendChild(btnEnter);
+        }
+
+        if (data.status === "entered") {
+          const btnConfirm = document.createElement("button");
+          btnConfirm.textContent = "入店確定";
+          btnConfirm.style.backgroundColor = "#2980b9";
+          btnConfirm.style.color = "white";
+          btnConfirm.onclick = () => {
+            db.collection("queue").doc(doc.id).update({ status: "confirmed" });
+          };
+          btnGroup.appendChild(btnConfirm);
+        }
+
+        const btnCancel = document.createElement("button");
+        btnCancel.className = "btn-exit";
+        btnCancel.textContent = "キャンセル";
+        btnCancel.onclick = () => {
+          db.collection("queue").doc(doc.id).update({ status: "expired" });
+        };
+        btnGroup.appendChild(btnCancel);
+
+        list.appendChild(item);
+      });
+    });
+  }
+
+  function renderHistoryQueue() {
+    db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
+      const tbody = document.querySelector("#queueHistory tbody");
+      tbody.innerHTML = "";
+
+      snapshot.docs.forEach((doc, index) => {
+        const data = doc.data();
+        const status = data.status;
+
+        if (status === "confirmed" || status === "expired") {
+          const row = document.createElement("tr");
+          const enteredAt = data.enteredAt ? new Date(data.enteredAt) : null;
+          const timestamp = new Date(data.timestamp);
+
+          let waited = "不明";
+          if (enteredAt) {
+            const diff = timestamp - enteredAt;
+            const m = Math.floor(diff / 60000);
+            const s = Math.floor((diff % 60000) / 1000);
+            waited = `${m}分${s}秒`;
+          }
+
+          row.innerHTML = `
+            <td>${index + 1}</td>
+            <td>${timestamp.toLocaleString("ja-JP")}</td>
+            <td>${status}</td>
+            <td>${waited}</td>
+          `;
+          tbody.appendChild(row);
+        }
+      });
+    });
+  }
+
+  window.onload = () => {
+    document.getElementById("mainTitle").style.display = "block";
+    renderQueue();
+    renderHistoryQueue();
+    calculateAverages();
+  };
+
+  document.addEventListener('DOMContentLoaded', () => {
+    document.querySelector('.menu-button').addEventListener('click', () => {
+      document.querySelector('.drawer').classList.toggle('open');
+    });
+  });
+</script>
 </body>
 </html>
