--- a/practice.html
+++ b/practice.html
@@ -1,370 +1,127 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>店外待ち管理（店員用）</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>テーブル管理</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import { getFirestore, collection, query, orderBy, onSnapshot, addDoc, setDoc, doc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    let tableStatus = {};
+
+    window.forceExit = async function(tableId, deviceId) {
+      const confirmExit = confirm(`テーブル ${tableId} を強制退店させますか？`);
+      if (!confirmExit) return;
+
+      await addDoc(collection(db, "logs"), {
+        table: tableId,
+        type: "exit",
+        timestamp: new Date().toISOString(),
+        device: deviceId || "force-exit"
+      });
+
+      if (deviceId) {
+        await setDoc(doc(db, "force_exit_flags", deviceId), {
+          table: tableId,
+          redirect: true,
+          timestamp: new Date().toISOString()
+        });
+      }
+
+      alert(`テーブル ${tableId} の強制退出処理を完了しました`);
+    };
+
+    onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
+        const tableId = data.table;
+        const deviceId = data.device;
+        const timestamp = new Date(data.timestamp);
+        const type = data.type;
+
+        if (!tableStatus[tableId]) {
+          tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+        }
+
+        if (type === "enter") {
+          tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
+        } else if (type === "exit") {
+          tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
+        }
+      });
+
+      const tbody = document.querySelector("#tableStatusTable tbody");
+      tbody.innerHTML = "";
+
+      for (const [tableId, info] of Object.entries(tableStatus)) {
+        const tr = document.createElement("tr");
+        tr.dataset.tableId = tableId;
+        tr.className = info.status === "occupied" ? "occupied" : "vacant";
+
+        const duration = info.status === "occupied" && info.startTime
+          ? Math.floor((new Date() - info.startTime) / 60000)
+          : "-";
+
+        tr.innerHTML = `
+          <td>${tableId}</td>
+          <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
+          <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
+          <td class="usage-time">${duration}</td>
+          <td>${info.status === "occupied" ? `<button onclick="forceExit('${tableId}', '${info.deviceId}')">強制退出</button>` : "-"}</td>
+        `;
+        tbody.appendChild(tr);
+      }
+    });
+
+    setInterval(() => {
+      const now = new Date();
+      for (const [tableId, info] of Object.entries(tableStatus)) {
+        if (info.status === "occupied" && info.startTime) {
+          const duration = Math.floor((now - info.startTime) / 60000);
+          const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
+          if (row) {
+            row.querySelector(".usage-time").textContent = duration;
+          }
+        }
+      }
+    }, 60000);
+  </script>
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-    }
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
-    }
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
-      color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
-    }
-    .drawer.open {
-      left: 0;
-    }
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
-    }
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-    h1 {
-      text-align: center;
-      padding: 20px;
-    }
-    h2 {
-      margin-top: 40px;
-      margin-bottom: 10px;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 5px;
-      text-align: center;
-    }
-    .queue-item {
-      background: #fff;
-      padding: 15px;
-      margin: 10px auto;
-      max-width: 500px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .queue-item p {
-      margin: 5px 0;
-    }
-    .btn-group {
-      margin-top: 10px;
-    }
-    button {
-      margin-right: 10px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn-enter { background: #2ecc71; color: white; }
-    .btn-exit { background: #e74c3c; color: white; }
-
-    #avg-times {
-      text-align: center;
-      margin: 20px auto;
-      font-weight: bold;
-      padding: 20px;
-      background-color: #fef6e4;
-      border: 2px solid #f3d250;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      font-size: 1.1em;
-    }
-
-    table {
-      width: 90%;
-      margin: 20px auto;
-      border-collapse: collapse;
-      background-color: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    th, td {
-      padding: 10px;
-      border: 1px solid #ccc;
-      text-align: center;
-    }
-    th {
-      background-color: #ecf0f1;
-    }
+    body { font-family: sans-serif; background: #f0f8ff; padding: 20px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 10px; text-align: center; }
+    th { background: #00796b; color: white; }
+    .occupied { background: #ffdddd; }
+    .vacant { background: #ddffdd; }
+    button { padding: 6px 12px; background: #e74c3c; color: white; border: none; border-radius: 5px; cursor: pointer; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="menu-button"><span></span><span></span><span></span></div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="index.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="dashboard.html">ホーム</a>
-      <a href="table.html">テーブル管理</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">順番待ち管理</a>
-      <a href="/QR/qrcode.html">QRコード一覧</a>
-      <a href="generate.html">QRコード生成</a>
-    </div>
-  </header>
-
-  <h1 style="display:none;" id="mainTitle">順番待ち管理</h1>
-
-  <section>
-    <div id="avg-times">滞在時間を計算中...</div>
-    <h2>順番一覧</h2>
-  </section>
-  <div id="queueList"></div>
-
-  <section>
-    <h2>順番待ち履歴</h2>
-    <table id="queueHistory">
-      <thead>
-        <tr>
-          <th>番号札</th>
-          <th>時刻</th>
-          <th>状態</th>
-          <th>待たせた時間</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </section>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  const dayMap = ["日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"];
-
-  function calculateAverages() {
-    db.collection("logs").onSnapshot(snapshot => {
-      const logs = snapshot.docs.map(doc => doc.data());
-      logs.sort((a, b) => new Date(a.timestamp) - new Date(b.timestamp));
-      const sessions = {};
-      const durations = [];
-
-      const today = new Date();
-      const todayStr = today.toISOString().slice(0, 10);
-      const todayDurations = [];
-      const weekdayDurations = [];
-
-      logs.forEach(log => {
-        const key = log.device + "_" + log.table;
-        const time = new Date(log.timestamp);
-        if (log.type === "enter") {
-          sessions[key] = time;
-        } else if (log.type === "exit" && sessions[key]) {
-          const duration = (time - sessions[key]) / 1000;
-          if (duration > 0 && duration < 60 * 60 * 5) {
-            durations.push(duration);
-            const enterStr = sessions[key].toISOString().slice(0, 10);
-            const weekday = sessions[key].getDay();
-            if (enterStr === todayStr) todayDurations.push(duration);
-            if (weekday === today.getDay()) weekdayDurations.push(duration);
-          }
-          delete sessions[key];
-        }
-      });
-
-      function formatAvg(list) {
-        if (list.length === 0) return "データなし";
-        const avg = list.reduce((a, b) => a + b, 0) / list.length;
-        const m = Math.floor(avg / 60);
-        const s = Math.floor(avg % 60);
-        return `${m}分${s}秒（${list.length}名）`;
-      }
-
-      document.getElementById("avg-times").innerHTML = `
-        ✅ <strong>今日の平均滞在時間：</strong>${formatAvg(todayDurations)}<br>
-        📅 <strong>${dayMap[today.getDay()]}の平均滞在時間：</strong>${formatAvg(weekdayDurations)}<br>
-        📊 <strong>総合平均滞在時間：</strong>${formatAvg(durations)}
-      `;
-    });
-  }
-
-  function renderQueue() {
-    db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-      const ticketMap = {};
-      const allDocs = snapshot.docs;
-      const visibleDocs = allDocs.filter(doc => {
-        const status = doc.data().status;
-        return status === "waiting" || status === "entered";
-      });
-      const list = document.getElementById("queueList");
-      list.innerHTML = "";
-
-      allDocs.forEach((doc, index) => {
-        if (!(doc.id in ticketMap)) ticketMap[doc.id] = index + 1;
-      });
-
-      visibleDocs.forEach(doc => {
-        const data = doc.data();
-        const item = document.createElement("div");
-        item.className = "queue-item";
-        item.innerHTML = `
-          <p><strong>番号札:</strong> ${ticketMap[doc.id]}</p>
-          <p><strong>時刻:</strong> ${new Date(data.timestamp).toLocaleString("ja-JP")}</p>
-          <p><strong>状態:</strong> ${data.status}</p>
-          <div class="btn-group"></div>
-        `;
-
-        const btnGroup = item.querySelector(".btn-group");
-
-        if (data.status === "waiting") {
-          const btnEnter = document.createElement("button");
-          btnEnter.className = "btn-enter";
-          btnEnter.textContent = "入店通知";
-          btnEnter.onclick = () => {
-            db.collection("queue").doc(doc.id).update({
-              status: "entered",
-              enteredAt: new Date().toISOString()
-            });
-          };
-          btnGroup.appendChild(btnEnter);
-        }
-
-        if (data.status === "entered") {
-          const btnConfirm = document.createElement("button");
-          btnConfirm.textContent = "入店確定";
-          btnConfirm.style.backgroundColor = "#2980b9";
-          btnConfirm.style.color = "white";
-          btnConfirm.onclick = () => {
-            db.collection("queue").doc(doc.id).update({ status: "confirmed" });
-          };
-          btnGroup.appendChild(btnConfirm);
-        }
-
-        const btnCancel = document.createElement("button");
-        btnCancel.className = "btn-exit";
-        btnCancel.textContent = "キャンセル";
-        btnCancel.onclick = () => {
-          db.collection("queue").doc(doc.id).update({ status: "expired" });
-        };
-        btnGroup.appendChild(btnCancel);
-
-        list.appendChild(item);
-      });
-    });
-  }
-
-  function renderHistoryQueue() {
-    db.collection("queue").orderBy("timestamp").onSnapshot(snapshot => {
-      const tbody = document.querySelector("#queueHistory tbody");
-      tbody.innerHTML = "";
-
-      snapshot.docs.forEach((doc, index) => {
-        const data = doc.data();
-        const status = data.status;
-
-        if (status === "confirmed" || status === "expired") {
-          const row = document.createElement("tr");
-          const enteredAt = data.enteredAt ? new Date(data.enteredAt) : null;
-          const timestamp = new Date(data.timestamp);
-
-          let waited = "不明";
-          if (enteredAt) {
-            const diff = enteredAt - timestamp;
-            const m = Math.floor(diff / 60000);
-            const s = Math.floor((diff % 60000) / 1000);
-            waited = `${m}分${s}秒`;
-          }
-
-          row.innerHTML = `
-            <td>${index + 1}</td>
-            <td>${timestamp.toLocaleString("ja-JP")}</td>
-            <td>${status}</td>
-            <td>${waited}</td>
-          `;
-          tbody.appendChild(row);
-        }
-      });
-    });
-  }
-
-  window.onload = () => {
-    document.getElementById("mainTitle").style.display = "block";
-    renderQueue();
-    renderHistoryQueue();
-    calculateAverages();
-  };
-
-  document.addEventListener('DOMContentLoaded', () => {
-    document.querySelector('.menu-button').addEventListener('click', () => {
-      document.querySelector('.drawer').classList.toggle('open');
-    });
-  });
-</script>
+  <h1>テーブル管理</h1>
+  <table id="tableStatusTable">
+    <thead>
+      <tr>
+        <th>テーブルID</th>
+        <th>状態</th>
+        <th>使用開始時刻</th>
+        <th>利用時間（分）</th>
+        <th>強制退出</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </body>
 </html>
